--- a/src/translation/pt.json
+++ b/src/translation/pt.json
@@ -2,7 +2,7 @@
   "navbar": {
     "home": "Home",
     "sobre": "Sobre",
-    "servicos": "Serviços",
+    "solucoes": "Soluções",
     "contato": "Contato"
   },
   "heroCard": {
